Complete overlay relay acceptance slice